[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/dash/Dash.gd" type="Script" id=1]

[node name="Dash" type="Node"]
script = ExtResource( 1 )

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
